--- a/base-one/trunk/doc/shared.css
+++ b/base-one/trunk/doc/shared.css
@@ -1,3 +1,7 @@
+/* COMMENT:  The shared.css stylesheet for the hsqldb/docs directory and elsewhere *?
+/* This material is published under the Copyrights and Licenses listed at */
+/* and in the directory /hsqldb/docs/hypersonic_lic.txt */
+
 span.guimenu     { font-family: monospace; font-style: italic; }
 span.guimenuitem { font-family: monospace; font-style: italic; }
 span.guilabel    { font-family: monospace; font-style: italic; }
