--- a/base-one/trunk/docsrc/shared.css
+++ b/base-one/trunk/docsrc/shared.css
@@ -2,7 +2,7 @@
 /* This material is published under the Copyrights and Licenses listed at */
 /* and in the directory /hsqldb/docs/hypersonic_lic.txt */
 
-a:visited { color: black }
+a:visited { color: #083194; }
 
 span.guimenu     { font-family: monospace; font-style: italic; }
 span.guimenuitem { font-family: monospace; font-style: italic; }
