--- a/base-one/trunk/docsrc/shared.css
+++ b/base-one/trunk/docsrc/shared.css
@@ -13,14 +13,14 @@ span.guisubmenu  { font-family: monospace; font-style: italic; }
 span.term        {
     font-family: monospace;
     font-weight: bold;
-    background: black;
+    background: #083194;
     color: white;
     padding: 1px;
 }
 span.term a      {
     font-family: monospace;
     font-weight: bold;
-    background: black;
+    background: #083194;
     color: white;
     padding: 1px;
 }
