Mark up DocBook remark elements

--- a/base-one/trunk/docsrc/shared.css
+++ b/base-one/trunk/docsrc/shared.css
@@ -49,3 +49,8 @@ div.section h2.title {
     padding: 2px;
     border: none;
 }
+
+span.remark        {
+    font-weight: bold;
+    color: orange;
+}
