--- a/odbc/trunk/msi-src/psqlodbc.wxs
+++ b/odbc/trunk/msi-src/psqlodbc.wxs
@@ -1,23 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    $Id$
+
+    MSI Installer for ODBC Driver for HyperSQL.
+
+    Significant modifications Copyright 2009 by
+    the HSQL Development Group.  Changes made by the HSQL
+    Development are documented precisely in the public HyperSQL
+    source code repository, available through http://hsqldb.org.
+
+    This library is free software; you can redistribute it and/or
+    modify it under the terms of the GNU Library General Public
+    License as published by the Free Software Foundation; either
+    version 2 of the License, or (at your option) any later version.
+
+    This library is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+    Library General Public License for more details.
+
+    You should have received a copy of the GNU Library General Public
+    License along with this library; if not, write to the
+    Free Foundation, Inc., 51 Franklin Street, Fifth Floor,
+    Boston, MA  02110-1301  USA
+-->
+
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   
 <!-- Product details -->
 
   <Product 
-    Manufacturer="PostgreSQL Global Development Group" 
+    Manufacturer="The HSQL Development Group" 
     Id="838E187D-8B7A-473d-B93C-C8E970B15D2B"
     UpgradeCode="24BCA538-75A2-4a7f-B236-C99EFC2145DE"
-    Name="psqlODBC"
+    Name="hsqlodbc"
     Version="$(var.VERSION)" 
     Language="1033">
 
 <!-- Package details -->
 
     <Package
-      Keywords="PostgreSQL, ODBC"
-      Comments="PostgreSQL ODBC Driver"
-      Manufacturer="PostgreSQL Global Development Group" 
-      InstallerVersion="150"
+      Keywords="HSQLDB, HyperSQL, ODBC"
+      Comments="HyperSQL ODBC Driver"
+      Manufacturer="The HSQL Development Group" 
+      InstallerVersion="300"
       Languages="1033" 
       Compressed="yes" 
       SummaryCodepage="1252" />
@@ -27,45 +53,45 @@
     <Directory Id="TARGETDIR" Name="SourceDir">
 
        <!-- Shared assembly runtime for VS 2005 -->
-       <Merge Id="msvcr80dll" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/Microsoft_VC80_CRT_x86.msm"/>
-       <Merge Id="msvcr80policy" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/policy_8_0_Microsoft_VC80_CRT_x86.msm"/>
+       <Merge Id="msvcr90dll" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/Microsoft_VC90_CRT_x86.msm"/>
+       <Merge Id="msvcr90policy" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/policy_9_0_Microsoft_VC90_CRT_x86.msm"/>
 
       <Directory Id="ProgramFilesFolder" Name="PFiles">
-        <Directory Id="BASEDIR" Name="psqlODBC">
+        <Directory Id="BASEDIR" Name="hsqlodbc">
           <Directory Id="SUBLOC" Name="$(var.SUBLOC)">
             <Directory Id="BINDIR" Name="bin">
               <Component Id="registration" Guid="4F0C04EB-ADCB-4fa8-B6A3-E9F74EA693F8">
-                <RegistryValue KeyPath="yes" Type="string" Root="HKLM" Key="Software\psqlODBC" Name="Version" Value="$(var.VERSION)" />
+                <RegistryValue KeyPath="yes" Type="string" Root="HKLM" Key="Software\hsqlodbc" Name="Version" Value="$(var.VERSION)" />
               </Component>
-              <Merge Id="psqlodbcm" DiskId="1" Language="1033" SourceFile="psqlodbc.msm" />
+              <Merge Id="hsqlodbcm" DiskId="1" Language="1033" SourceFile="psqlodbc.msm" />
             </Directory>
             <Directory Id="DOCSDIR" Name="docs">
               <Component Id="docs" Guid="89DDBC52-9F0D-4846-91DC-09EECC87E42E">
-                <File Id="docs.index.html" Name="index.html" DiskId="1" Source="../docs/index.html" KeyPath="yes" />
-                <File Id="docs.config.html" Name="config.html" DiskId="1" Source="../docs/config.html" />
-                <File Id="docs.config_opt.html" Name="config-opt.html" DiskId="1" Source="../docs/config-opt.html" />
-                <File Id="docs.faq.html" Name="faq.html" DiskId="1" Source="../docs/faq.html" />
-                <File Id="docs.howto_accesslo.html" Name="howto-accesslo.html" DiskId="1" Source="../docs/howto-accesslo.html" />
-                <File Id="docs.howto_accessvba.html" Name="howto-accessvba.html" DiskId="1" Source="../docs/howto-accessvba.html" />
-                <File Id="docs.howto_bo.html" Name="howto-bo.html" DiskId="1" Source="../docs/howto-bo.html" />
-                <File Id="docs.howto_ch.html" Name="howto-ch.html" DiskId="1" Source="../docs/howto-ch.html" />
-                <File Id="docs.howto_csharp.html" Name="howto-csharp.html" DiskId="1" Source="../docs/howto-csharp.html" />
-                <File Id="docs.howto_vb.html" Name="howto-vb.html" DiskId="1" Source="../docs/howto-vb.html" />
-                <File Id="docs.howto_vblo.html" Name="howto-vblo.html" DiskId="1" Source="../docs/howto-vblo.html" />
-                <File Id="docs.release.html" Name="release.html" DiskId="1" Source="../docs/release.html" />
-                <File Id="docs.unix_compilation.html" Name="unix-compilation.html" DiskId="1" Source="../docs/unix-compilation.html" />
-                <File Id="docs.win32_compilation.html" Name="win32-compilation.html" DiskId="1" Source="../docs/win32-compilation.html" />
+                <File Id="docs.index.html" Name="index.html" DiskId="1" Source="../doc/index.html" KeyPath="yes" />
+                <File Id="docs.config.html" Name="config.html" DiskId="1" Source="../doc/config.html" />
+                <File Id="docs.config_opt.html" Name="config-opt.html" DiskId="1" Source="../doc/config-opt.html" />
+                <File Id="docs.faq.html" Name="faq.html" DiskId="1" Source="../doc/faq.html" />
+                <File Id="docs.howto_accesslo.html" Name="howto-accesslo.html" DiskId="1" Source="../doc/howto-accesslo.html" />
+                <File Id="docs.howto_accessvba.html" Name="howto-accessvba.html" DiskId="1" Source="../doc/howto-accessvba.html" />
+                <File Id="docs.howto_bo.html" Name="howto-bo.html" DiskId="1" Source="../doc/howto-bo.html" />
+                <File Id="docs.howto_ch.html" Name="howto-ch.html" DiskId="1" Source="../doc/howto-ch.html" />
+                <File Id="docs.howto_csharp.html" Name="howto-csharp.html" DiskId="1" Source="../doc/howto-csharp.html" />
+                <File Id="docs.howto_vb.html" Name="howto-vb.html" DiskId="1" Source="../doc/howto-vb.html" />
+                <File Id="docs.howto_vblo.html" Name="howto-vblo.html" DiskId="1" Source="../doc/howto-vblo.html" />
+                <File Id="docs.release.html" Name="release.html" DiskId="1" Source="../doc/release.html" />
+                <File Id="docs.unix_compilation.html" Name="unix-compilation.html" DiskId="1" Source="../doc/unix-compilation.html" />
+                <File Id="docs.win32_compilation.html" Name="win32-compilation.html" DiskId="1" Source="../doc/win32-compilation.html" />
 
-                <Shortcut Id="docs.index.html" Directory="SMDir" Name="Documentation index" Description="psqlODBC documentation, HOWTOs and FAQs" Advertise="yes" Show="normal" />
+                <Shortcut Id="docs.index.html" Directory="SMDir" Name="Documentation index" Description="hsqlodbc documentation, HOWTOs and FAQs" Advertise="yes" Show="normal" />
               </Component>
             </Directory>
           </Directory>
         </Directory>
       </Directory>
       <Directory Id="ProgramMenuFolder" Name="." SourceName="Programs">
-        <Directory Id="SMDir" Name="psqlODBC">
+        <Directory Id="SMDir" Name="hsqlodbc">
             <Component Id="smdir" Guid="{22288E09-B3B6-4181-907F-676099C20125}">
-                <RegistryValue KeyPath="yes" Type="string" Root="HKCU" Key="Software\psqlODBC\SMDir Created" Value="y" />
+                <RegistryValue KeyPath="yes" Type="string" Root="HKCU" Key="Software\hsqlodbc\SMDir Created" Value="y" />
                 <RemoveFolder Id="SMDir" On="uninstall" />
             </Component>
         </Directory>
@@ -74,12 +100,12 @@
 
 <!-- Features -->
 
-    <Feature Id="psqlodbc" Title="psqlODBC" Level="1" Description="psqlODBC - The PostgreSQL ODBC Driver" ConfigurableDirectory="BASEDIR" Display="expand">
+    <Feature Id="hsqlodbc" Title="hsqlodbc" Level="1" Description="hsqlodbc - The HyperSQL ODBC Driver" ConfigurableDirectory="BASEDIR" Display="expand">
       <Feature Id="binaries" Title="ODBC Driver" Level="1" Description="The ODBC driver and supporting libraries.">
         <ComponentRef Id="registration" />
-        <MergeRef Id="psqlodbcm" />
-        <MergeRef Id="msvcr80dll" />
-        <MergeRef Id="msvcr80policy" />
+        <MergeRef Id="hsqlodbcm" />
+        <MergeRef Id="msvcr90dll" />
+        <MergeRef Id="msvcr90policy" />
       </Feature>
 
       <Feature Id="docs" Title="Documentation" Level="4" Description="Documentation, FAQs and HOWTOs.">
@@ -88,7 +114,7 @@
       </Feature>
 
     </Feature>
-    <Media Id="1" EmbedCab="yes" Cabinet="psqlodbc.cab"/>
+    <Media Id="1" EmbedCab="yes" Cabinet="hsqlodbc.cab"/>
 
 <!-- Properties -->
 
