--- a/odbc/trunk/msi-src/psqlodbc.wxs
+++ b/odbc/trunk/msi-src/psqlodbc.wxs
@@ -2,7 +2,10 @@
 <!--
     $Id$
 
-    MSI Installer for ODBC Driver for HyperSQL.
+    Wix MSI Installer
+
+
+    HyperSQL ODBC Driver
 
     Significant modifications Copyright 2009 by
     the HSQL Development Group.  Changes made by the HSQL
@@ -27,106 +30,121 @@
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
-<!-- Product details -->
+  <Product Manufacturer="The HSQL Development Group"
+           Id="4733F470-9DFC-3410-8556-C309E4D95A02"
+           UpgradeCode="99878FE9-3C9C-3C51-8CEC-BB6291A6B490"
+           Name="HyperSQL ODBC Driver"
+           Version="$(var.VERSION)"
+           Language="1033">
 
-  <Product
-    Manufacturer="The HSQL Development Group"
-    Id="838E187D-8B7A-473d-B93C-C8E970B15D2B"
-    UpgradeCode="24BCA538-75A2-4a7f-B236-C99EFC2145DE"
-    Name="hsqlodbc"
-    Version="$(var.VERSION)"
-    Language="1033">
-
-<!-- Package details -->
-
-    <Package
-      Keywords="HSQLDB, HyperSQL, ODBC"
-      Comments="HyperSQL ODBC Driver"
-      Manufacturer="The HSQL Development Group"
-      InstallerVersion="300"
-      Languages="1033"
-      Compressed="yes"
-      SummaryCodepage="1252" />
-
-<!-- Directories -->
+    <Package Keywords="HSQLDB, HyperSQL, ODBC"
+             Comments="HyperSQL ODBC Driver"
+             Manufacturer="The HSQL Development Group"
+             InstallerVersion="300"
+             Languages="1033"
+             Compressed="yes"
+             SummaryCodepage="1252" />
 
     <Directory Id="TARGETDIR" Name="SourceDir">
 
-       <!-- Shared assembly runtime for VS 2005 -->
-       <Merge Id="msvcr90dll" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/Microsoft_VC90_CRT_x86.msm"/>
-       <Merge Id="msvcr90policy" Language="0" DiskId="1" SourceFile="$(var.PROGRAMCOM)/policy_9_0_Microsoft_VC90_CRT_x86.msm"/>
+      <!-- Shared assembly runtime for VS 2005 -->
+      <Merge Id="msvcr90dll" Language="0" DiskId="1"
+             SourceFile="$(var.PROGRAMCOM)/Microsoft_VC90_CRT_x86.msm"/>
+      <Merge Id="msvcr90policy" Language="0" DiskId="1"
+         SourceFile="$(var.PROGRAMCOM)/policy_9_0_Microsoft_VC90_CRT_x86.msm"/>
 
       <Directory Id="ProgramFilesFolder" Name="PFiles">
         <Directory Id="BASEDIR" Name="hsqlodbc">
-          <Directory Id="SUBLOC" Name="$(var.SUBLOC)">
-            <Directory Id="BINDIR" Name="bin">
-              <Component Id="registration" Guid="4F0C04EB-ADCB-4fa8-B6A3-E9F74EA693F8">
-                <RegistryValue KeyPath="yes" Type="string" Root="HKLM" Key="Software\hsqlodbc" Name="Version" Value="$(var.VERSION)" />
-              </Component>
-              <Merge Id="hsqlodbcm" DiskId="1" Language="1033" SourceFile="psqlodbc.msm" />
-            </Directory>
-            <Directory Id="DOCSDIR" Name="docs">
-              <Component Id="docs" Guid="89DDBC52-9F0D-4846-91DC-09EECC87E42E">
-                <File Id="docs.index.html" Name="index.html" DiskId="1" Source="../doc/index.html" KeyPath="yes" />
-                <File Id="docs.config.html" Name="config.html" DiskId="1" Source="../doc/config.html" />
-                <File Id="docs.config_opt.html" Name="config-opt.html" DiskId="1" Source="../doc/config-opt.html" />
-                <File Id="docs.faq.html" Name="faq.html" DiskId="1" Source="../doc/faq.html" />
-                <File Id="docs.howto_accesslo.html" Name="howto-accesslo.html" DiskId="1" Source="../doc/howto-accesslo.html" />
-                <File Id="docs.howto_accessvba.html" Name="howto-accessvba.html" DiskId="1" Source="../doc/howto-accessvba.html" />
-                <File Id="docs.howto_bo.html" Name="howto-bo.html" DiskId="1" Source="../doc/howto-bo.html" />
-                <File Id="docs.howto_ch.html" Name="howto-ch.html" DiskId="1" Source="../doc/howto-ch.html" />
-                <File Id="docs.howto_csharp.html" Name="howto-csharp.html" DiskId="1" Source="../doc/howto-csharp.html" />
-                <File Id="docs.howto_vb.html" Name="howto-vb.html" DiskId="1" Source="../doc/howto-vb.html" />
-                <File Id="docs.howto_vblo.html" Name="howto-vblo.html" DiskId="1" Source="../doc/howto-vblo.html" />
-                <File Id="docs.release.html" Name="release.html" DiskId="1" Source="../doc/release.html" />
-                <File Id="docs.unix_compilation.html" Name="unix-compilation.html" DiskId="1" Source="../doc/unix-compilation.html" />
-                <File Id="docs.win32_compilation.html" Name="win32-compilation.html" DiskId="1" Source="../doc/win32-compilation.html" />
+          <Directory Id="BINDIR" Name="bin">
+            <Component Id="registration"
+                       Guid="8D8EDBDF-0114-3B3E-A2BC-E9F8F675C178">
+              <RegistryValue KeyPath="yes" Type="string" Root="HKLM"
+                             Key="Software\hsqlodbc" Name="Version"
+                             Value="$(var.VERSION)" />
+            </Component>
+            <Merge Id="hsqlodbcm" DiskId="1" Language="1033"
+                   SourceFile="psqlodbc.msm" />
+          </Directory>
+          <Directory Id="DOCSDIR" Name="docs">
+            <Component Id="docs" Guid="91C8184E-C164-31A0-A594-545B3E46D4D6">
+              <File Id="docs.index_html" Name="index.html"
+                    DiskId="1" Source="../doc/index.html" KeyPath="yes" />
+              <File Id="docs.config_html" Name="config.html"
+                    DiskId="1" Source="../doc/config.html" />
+              <File Id="docs.config_opt_html" Name="config-opt.html"
+                    DiskId="1" Source="../doc/config-opt.html" />
+              <File Id="docs.faq_html" Name="faq.html"
+                    DiskId="1" Source="../doc/faq.html" />
+              <File Id="docs.howto_accesslo_html" Name="howto-accesslo.html"
+                    DiskId="1" Source="../doc/howto-accesslo.html" />
+              <File Id="docs.howto_accessvba_html" Name="howto-accessvba.html"
+                    DiskId="1" Source="../doc/howto-accessvba.html" />
+              <File Id="docs.howto_bo_html" Name="howto-bo.html"
+                    DiskId="1" Source="../doc/howto-bo.html" />
+              <File Id="docs.howto_ch_html" Name="howto-ch.html"
+                    DiskId="1" Source="../doc/howto-ch.html" />
+              <File Id="docs.howto_csharp_html" Name="howto-csharp.html"
+                    DiskId="1" Source="../doc/howto-csharp.html" />
+              <File Id="docs.howto_vb_html" Name="howto-vb.html"
+                    DiskId="1" Source="../doc/howto-vb.html" />
+              <File Id="docs.howto_vblo_html" Name="howto-vblo.html"
+                    DiskId="1" Source="../doc/howto-vblo.html" />
+              <File Id="docs.release_html" Name="release.html"
+                    DiskId="1" Source="../doc/release.html" />
+              <File Id="docs.unix_compilation_html"
+                    Name="unix-compilation.html"
+                    DiskId="1" Source="../doc/unix-compilation.html" />
+              <File Id="docs.win32_compilation_html"
+                    Name="win32-compilation.html"
+                    DiskId="1" Source="../doc/win32-compilation.html" />
+              <File Id="docs.notice_txt" Name="notice.txt"
+                    DiskId="1" Source="../doc/notice.txt" />
 
-                <Shortcut Id="docs.index.html" Directory="SMDir" Name="Documentation index" Description="hsqlodbc documentation, HOWTOs and FAQs" Advertise="yes" Show="normal" />
-              </Component>
-            </Directory>
+              <Shortcut Id="docs.index_html" Directory="SMDir"
+                        Name="Documentation index"
+                        Description="hsqlodbc documentation, HOWTOs and FAQs"
+                        Advertise="yes" Show="normal" />
+            </Component>
           </Directory>
         </Directory>
       </Directory>
       <Directory Id="ProgramMenuFolder" Name="." SourceName="Programs">
         <Directory Id="SMDir" Name="hsqlodbc">
-            <Component Id="smdir" Guid="{22288E09-B3B6-4181-907F-676099C20125}">
-                <RegistryValue KeyPath="yes" Type="string" Root="HKCU" Key="Software\hsqlodbc\SMDir Created" Value="y" />
-                <RemoveFolder Id="SMDir" On="uninstall" />
-            </Component>
+          <Component Id="smdir" Guid="7F26DF6E-A06C-36AE-9792-EF5D5276BB17">
+            <RegistryValue KeyPath="yes" Type="string" Root="HKCU"
+                           Key="Software\hsqlodbc\SMDir Created" Value="y" />
+            <RemoveFolder Id="SMDir" On="uninstall" />
+          </Component>
         </Directory>
       </Directory>
     </Directory>
 
-<!-- Features -->
-
-    <Feature Id="hsqlodbc" Title="hsqlodbc" Level="1" Description="hsqlodbc - The HyperSQL ODBC Driver" ConfigurableDirectory="BASEDIR" Display="expand">
-      <Feature Id="binaries" Title="ODBC Driver" Level="1" Description="The ODBC driver and supporting libraries.">
+    <Feature Id="hsqlodbc" Title="hsqlodbc" Level="1"
+             Description="hsqlodbc - The HyperSQL ODBC Driver"
+             ConfigurableDirectory="BASEDIR" Display="expand">
+      <Feature Id="binaries" Title="ODBC Driver" Level="1"
+               Description="The ODBC driver and supporting libraries.">
         <ComponentRef Id="registration" />
         <MergeRef Id="hsqlodbcm" />
         <MergeRef Id="msvcr90dll" />
         <MergeRef Id="msvcr90policy" />
       </Feature>
 
-      <Feature Id="docs" Title="Documentation" Level="4" Description="Documentation, FAQs and HOWTOs.">
+      <Feature Id="docs" Title="Documentation" Level="4"
+               Description="Documentation, FAQs and HOWTOs.">
         <ComponentRef Id="smdir" />
         <ComponentRef Id="docs" />
       </Feature>
-
     </Feature>
     <Media Id="1" EmbedCab="yes" Cabinet="hsqlodbc.cab"/>
-
-<!-- Properties -->
 
     <Property Id="ALLUSERS">2</Property>
     <Property Id="WIXUI_INSTALLDIR" Value="BASEDIR" />
 
-<!-- UI -->
-
+     <!-- UI -->
      <UIRef Id="WixUI_FeatureTree" />
      <WixVariable Id="WixUILicenseRtf" Value="lgpl.rtf" />
      <WixVariable Id="WixUIDialogBmp" Value="background.bmp" />
      <WixVariable Id="WixUIBannerBmp" Value="banner.bmp" />
-
   </Product>
 </Wix>
